k8s/full/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazor-unicorn-k8s
  labels:
    app.kubernetes.io/name: blazor-unicorn-k8s
    app.kubernetes.io/instance: blazor-unicorn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blazor-unicorn-k8s
      app.kubernetes.io/instance: blazor-unicorn
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blazor-unicorn-k8s
        app.kubernetes.io/instance: blazor-unicorn
      annotations:
    spec:
      containers:
        - name: blazor-unicorn-k8s
          image: jetersen/blazor-unicorn:v1.0.0
          imagePullPolicy: IfNotPresent
          resources: {}
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
