k8s/full/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blazor-unicorn-k8s
  labels:
    app.kubernetes.io/name: blazor-unicorn-k8s
    app.kubernetes.io/instance: blazor-unicorn
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: blazor-unicorn-k8s
    app.kubernetes.io/instance: blazor-unicorn
