k8s/full/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazor-unicorn-k8s
  labels:
    app.kubernetes.io/name: blazor-unicorn-k8s
    app.kubernetes.io/instance: blazor-unicorn
    kubernetes.io/ingress.class: nginx-public
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "unicorn.jetersen.dev"
      secretName: unicorn.jetersen.dev-tls
  rules:
    - host: "unicorn.jetersen.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blazor-unicorn-k8s
                port:
                  name: http
